--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
+    "animejs": "^3.2.2",
     "body-parser": "^1.20.2",
     "bootstrap": "4.5",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "~18.0.1",
     "@angular/cli": "~18.0.1",
     "@angular/compiler-cli": "~18.0.0",
+    "@types/animejs": "^3.1.12",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.12.12",
     "jasmine-core": "~5.1.2",
