--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "node src/server/index.js"
+    "server": "node src/server/server.js"
   },
   "private": true,
   "dependencies": {
